@@ -239,3 +239,4 @@ https://www.setn.com/News.aspx?NewsID=765598
 https://www.twreporter.org/a/hong-kong-national-security-law-goes-into-effect
 http://www.xinhuanet.com/politics/2020-07/07/c_1126208394.htm
 http://news.cctv.com/2020/07/10/ARTIlxEbF6MxTqGCHp6ZDeAG200710.shtml
+https://focustaiwan.tw/society/202007100023
