@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for focustaiwan.tw
+
 v0.29.0 2020-07-11T18:33:51+0800
   - Add a site-specific extractor for news.cctv.com
 
